--- a/app/views/shared/_mobile-render.slim
+++ b/app/views/shared/_mobile-render.slim
@@ -5,7 +5,7 @@
     table
       tr
         td.go-home
-          a href="#" Home
+          a href="#" =t'mobile_tab_bar.home'
         td.wtab
         td.wtab
         td.wtab
