Remove references to True Passion, LLC. Updated index.slim marketing list

--- a/app/views/home/index.slim
+++ b/app/views/home/index.slim
@@ -10,11 +10,11 @@ script type="text/javascript" src="http://www.yomobi.com/javascripts/mobile-redi
     img.lfloat src="/images/home-phone.png"
     .marketing-copy.lfloat
       p.line-1 YoMobi makes building a mobile site easy.
-      p.line-2 Go from sign up to online in 4 minutes.
+      p.line-2 Go from sign up to online in minutes.
       p.line-3 Features include:
       ul
-        li No sign up costs
-        li Free hosting
+        li Completely Free Mobile Site
+        li Free Hosting & Domain Name
         li One-click calling
         li Interactive maps
         li Social media integration
