--- a/app/views/site_manager/index.html.slim
+++ b/app/views/site_manager/index.html.slim
@@ -150,7 +150,7 @@
 
         .site-source.hide
           h3 Copy Site:
-          select name="site[source_db_name]"
+          select.source name="site[source_db_name]"
             option value="" -- Please Select a Site to Copy --
             | <% for (var i=0; i < sites.length; i++) { %>
             option value="{{ sites[i].url }}" [/{{ sites[i].url }}] {{ sites[i].name }}
