Added extra textfield to certain widgets. Addresses #215
call_back, leave_msg, & informed

--- a/app/views/builder/_templates.slim
+++ b/app/views/builder/_templates.slim
@@ -402,10 +402,16 @@ script.call-us-edit-area(type="text/template")
 script.leave-a-message-edit-area(type="text/template")
   label Your Email Address*:
   input(name="email" type="text" value="{{ _maybe.email }}")
+  br
+  label Message to Mobile Visitors:
+  textarea name="message" {{ _maybe.message }}
 
 script.call-me-back-edit-area(type="text/template")
   label Your Email Address*:
   input(name="email" type="text" value="{{ _maybe.email }}")
+  br
+  label Message to Mobile Visitors:
+  textarea name="message" {{ _maybe.message }}
 
 script.tell-a-friend-edit-area(type="text/template")
   p This widget appears as an icon on your mobile site and makes it easy for visitors to share your site with their friends.
@@ -428,6 +434,9 @@ script.rss-feed-edit-area(type="text/template")
 script.keep-me-informed-edit-area(type="text/template")
   label Your Email Address*:
   input name="email" type="text" value="{{ _maybe.email }}"
+  br
+  label Message to Mobile Visitors:
+  textarea name="message" {{ _maybe.message }}
   br
   .opt-in-select
     label Please select at least one of the following*:
