--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -73,7 +73,11 @@
 
   script.leave_msg-page(type="text/template")
     .input-wrap
+      | <% if (_maybe.message) { %>
+      p {{ message }}
+      | <% } %>
       p =t'leave_a_message.instructions'
+
       = form_tag "/#{@company.db_name}/leave_msg/submit", :method => 'post' do
         label =t'general.name'
         br
@@ -97,7 +101,11 @@
 
   script.call_back-page(type="text/template")
     .input-wrap
+      | <% if (_maybe.message) { %>
+      p {{ message }}
+      | <% } %>
       p =t'call_back.instructions'
+
       = form_tag "/#{@company.db_name}/call_back/submit", :method => 'post' do
         label =t'general.name'
         br
@@ -179,7 +187,11 @@
 
   script.informed-page(type="text/template")
     .input-wrap
+      | <% if (_maybe.message) { %>
+      p {{ message }}
+      | <% } %>
       p =t('keep_me_informed.instructions', :company_name => @company.name)
+
       = form_tag "/#{@company.db_name}/informed/submit", :method => 'post' do
         | <% if (_maybe.optForEmails) { %>
         label =t'general.email'
