Fixed "skip this step" link. Addresses #207

--- a/app/views/signup/default/step-3.slim
+++ b/app/views/signup/default/step-3.slim
@@ -39,7 +39,7 @@
   .action-bar
     .rfloat.main-btn
       input.content type="submit" value="Save & Continue"
-    a.skip-link.rfloat href=builder_main_path Skip this step
+    a.skip-link.rfloat href=account_setup_path(4) Skip this step
     .clearfix
 
 - content_for :js do
